# Mei-renderer

./: .gitignore  CMakeLists.txt  README.md
Resources/Shaders/: shader.frag  shader.vert
include/: mei-common.h  shaderProgram.h
src/: main.cpp  shaderProgram.cpp
